--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^18.1.0",
     "expo": "~48.0.18",
-    "expo-dev-client": "~2.2.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.23.0",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
