--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.23.0",
+    "formik": "^2.4.2",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-dotenv": "^3.4.9"
+    "react-native-calendar-picker": "^7.1.4",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
